<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">Will VPN</string>
    <string name="created_by">Created By © Will_Dev</string>
    <string name="play_more_app">https://codecanyon.net/user/will_dev/portfolio</string>
    <string name="applovin">6TOyc7zOBMct-TOSewDT7yfV1wC8qoaRX7VnbmQGsZaxOLFJ4EeeS_VlFTI01OycoxDT11C3XvC1GDMSpb6irZ</string>
    <string name="starapp_ads">208391442</string>
    <string name="loading_wait">Loading... please wait</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="isRTL">false</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_app_id">xxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">xxxxxxxxxxxxxxx</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="reward">Reward</string>
    <string name="reference_code">Reference Code</string>
    <string name="earn_point">Earn point</string>
    <string name="rate_app">Rate App</string>
    <string name="banner_premium_packages">Premium Membership</string>
    <string name="banner_description">By the Premium Plan and Get Ride of \n Fastest Servers in the world.</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="vip_price_demo_data">$0.00</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">Faq</string>
    <string name="login">Login or Logout </string>

    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">abcd</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">1234567890</string>
    <string name="about_us_about">About</string>

    <string name="ok">OK</string>
    <string name="save_profile">SAVE</string>
    <string name="loading">Loading....</string>
    <string name="no_data_found">No Data Found</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="you_have_not_login">You have not login</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="wrong">Something went to wrong please try again later</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>

    <string name="skip">Skip</string>
    <string name="got_it">GOT IT</string>
    <string name="welcome_title_two">Reward Points</string>
    <string name="welcome_title_three">Unlimited Bandwidth Servers.</string>
    <string name="welcome_description_one"><![CDATA[Refer and Earn the Points by sharing this application with your friends. ]]></string>
    <string name="welcome_description_two"><![CDATA[Play Lucky Wheel and You have Chance to win the Points !! Hurry Up !!]]></string>
    <string name="welcome_description_three">You can Unlock the Restigrated Website or Apps and Get Ride of Fastest Servers</string>

    <string name="logout">Logout</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_skip">Skip</string>
    <string name="textView_forget_password">Forget your password ?</string>
    <string name="google_login">Login With Gmail</string>
    <string name="facebook_login">Login With facebook</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="button_text_register">Register</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="conform_password">Conform Password</string>
    <string name="already_have_an_account_yet">Already have an account yet ?</string>
    <string name="register_login_text">Login</string>
    <string name="submit">Submit</string>

    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="pass_confPass_match">Password and confirm password does not match</string>
    <string name="please_enter_phone">Please enter phone number</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_message">Please enter message</string>

    <string name="forget_password">Forget password</string>
    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>

    <string name="title_verification">Enter Verification Code</string>
    <string name="enter_code">Enter code</string>
    <string name="opt_contain">We Have Send OTP On Your Email</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="verification_message">Verification code does not match</string>
    <string name="verify">verify</string>
    <string name="re_register">Again Registration</string>
    <string name="resend_your_otp">Resend Your Otp</string>
    <string name="click_hear">Click Here</string>
    <string name="server_time_out">Server time out please try again use latest otp</string>

    <string name="value">0</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="follow">Edit</string>
    <string name="unfollow">Edit</string>
    <string name="following">Edit</string>
    <string name="followers">Edit</string>
    <string name="not_following">You have not any user following</string>
    <string name="not_follower">You have not any user follow</string>
    <string name="user_not_instagram_link">User has not added instagram profile link</string>
    <string name="user_not_youtube_link">User has not added youtube profile link</string>

    <string name="delete">Delete</string>
    <string name="copy_text">Copy Text</string>
    <string name="tab_to_copy">Tap To Copy</string>
    <string name="your_reference_code">Your Reference Code</string>
    <string name="reference_code_detail">Share you reference code to others and earn more points.</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="enter_reference_code">Enter Reference Code</string>
    <string name="please_enter_reference_code">Please enter reference code</string>
    <string name="enter_ref_code_des">Enter your friends reference code to earn more points.</string>
    <string name="text_continue">Continue</string>
    <string name="add_thumbnail_file">+ Add Thumbnail File</string>
    <string name="upload">Upload</string>
    <string name="please_select_image">Please select image</string>
    <string name="please_select_category">Please select category</string>
    <string name="you_have">You Have</string>
    <string name="reward_point">Reward Point</string>
    <string name="reward_point_claim">Reward Point Claim</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="please_enter_detail">Please enter detail</string>
    <string name="user_point">User Point</string>
    <string name="approve">Approve</string>
    <string name="pending">Pending</string>
    <string name="reject">Reject</string>
    <string name="point">Point</string>
    <string name="bank_detail">Please select your transaction type and fill the details and admin will soon contact you.</string>
    <string name="current_point">Current Point</string>
    <string name="withdrawal_history">Withdrawal History</string>
    <string name="equal">=</string>
    <string name="minimum">Minimum</string>
    <string name="point_require">Reward point is required to claim</string>

    <string name="ready_to_upload">Ready to upload....</string>

    <string name="select_payment_type">Select Payment Type</string>
    <string name="please_select_payment">Please select payment</string>

    <string name="amount">Amount</string>
    <string name="request_date">Request date</string>
    <string name="approve_date">Approve date</string>
    <string name="reject_date">Reject date</string>
    <string name="payment_mode">Payment mode</string>
    <string name="bank_detail_td">Bank detail</string>

    <string name="play">Play</string>
    <string name="spinner">Lucky Wheel</string>
    <string name="daily_total_spins">Daily total spins</string>
    <string name="remaining_spins_today">Remaining spins today</string>

    <string name="detail_rm">Detail</string>
    <string name="point_status">Point status</string>
    <string name="payment_pending">Check detail after payment approved</string>

    <string name="full_name">Full Name</string>
    <string name="your_message">Your Message</string>
    <string name="request_verification">Request Verification</string>
    <string name="attach_document">Please attach a photo of your ID</string>
    <string name="document_first_note">We need to authenticate your Status Reward App account to verify your public image. Submitting a request does not allow your account to be analyzed. Authentication is mandatory for analysing.</string>
    <string name="document_note">We demand for photo ID basically name and date of birth i.e. government issued (e.g. passport, national identification card or driver’s license) or official business documents for analysing your request.</string>
    <string name="subject">Subject</string>
    <string name="apply_for">Apply for</string>
    <string name="verification">verification</string>
    <string name="status">Status</string>

    <string name="view_ad_title">Watch reward video ad ?</string>
    <string name="view_ad_detail">If you want to watch reward video ads then press Yes otherwise No.</string>

    <string name="custom_settings">Custom Settings</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="select_contact_type">Select contact type</string>
    <string name="contact_detail">Please enter you contact details and admin will soon contact you.</string>
    <string name="choose_one">Choose one</string>

    <string name="update">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="downloading">Downloading</string>

    <string name="ad_attribution" translatable="false">Ad</string>
</resources>
