<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_ad_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textView_view_ad" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/view_ad_detail"
                android:textColor="@color/textView_detail_view_ad" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_yes_viewAd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="10dp"
                    android:textColor="@color/white"
                    android:text="@string/yes"
                    app:backgroundTint="@color/button_bg" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_no_viewAd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:text="@string/no"
                    app:backgroundTint="@color/button_bg" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>