<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.willdev.openvpn.activity.Verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/bg_l">


            </ImageView>

            <ImageView
                android:id="@+id/imageView_icon"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/title_verification"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/otp_icon" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/enter_code"
                android:textColor="@color/textView_app_color"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/opt_contain"
                android:textColor="@color/textView_verification"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@color/background_us"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/textView_app_color"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="10dp"
                app:itemWidth="48dp"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cornerRadius="25dp"
                    android:text="@string/verify"
                    app:backgroundTint="@color/yellow"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_register_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    app:cornerRadius="25dp"
                    app:backgroundTint="@color/color_reg_verification"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/re_register"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/resend_your_otp"
                    android:textColor="@color/textView_verification"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/resend_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/click_hear"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>