<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Splas">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/primary_dark"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/logo" />





    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/willdev_loader" />

    <ProgressBar
        android:id="@+id/progressBar_splash_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:visibility="gone"
        android:theme="@style/ProgressBarThemeSplace" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar_splash_screen"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:gravity="center"
        android:text="@string/loading_wait"
        android:textAlignment="center"
        android:textColor="@color/white" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="12dp"
        android:text="@string/created_by"
        android:textAlignment="center"
        android:textColor="@color/white" />


</RelativeLayout>
