<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <RelativeLayout
        android:id="@+id/purchase_layout"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_back"/>

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_centerInParent="true"
            android:text="Refference Code"
            android:visibility="visible"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/rel_reference_code_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="@string/your_reference_code"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="@color/textView_title_reference_code" />

                        <LinearLayout
                            android:id="@+id/linearLayout_copy_reference_code"
                            android:layout_width="200dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/code_bg"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/textView_reference_code"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/reference_code"
                                android:textColor="@color/textView_reference_code"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:text="@string/tab_to_copy"
                                android:textColor="@color/textView_copy_reference_code"
                                android:textSize="14sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/reference_code_detail"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/textView_title_reference_code" />

                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/reference_code_img" />

                    </LinearLayout>

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar_reference_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_noDataFound_reference_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_data_found"
        android:textColor="@color/textView_noData"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>